<resources>
    <string name="app_name">YaridD</string>
    <string name="dedcForImage">logo</string>
    <string name="string_dedcforimage">logoforco</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="skip_onboarding">Skip</string>
    <string name="nextonboarding">Next</string>
    <string name="imagedesconboarding">imagedesconboarding</string>
    <string name="imagedesconboardinglanscape">imagedesconboardinglanscape</string>


    <string name="send">Add Post</string>
    <string name="profile">Profile</string>


    <string name="draweropen">Drawer Open</string>
    <string name="drawerclose">Drawer Close</string>
    <string name="title_activity_home">HomeAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="station_19">Station 19</string>
    <string name="todo">TODO</string>
    <string name="add_new_post">add new post</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
</resources>
