<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/colorWhite">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addnewpost"
            android:icon="@drawable/add_post"
            android:title="@string/add_new_post"
            android:checkable="true"/>
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/profile"
            android:checkable="true"/>

        <item
            android:id="@+id/Home"
            android:title="@string/home"
            android:icon="@drawable/home"
            android:checkable="true"/>

        <item
            android:id="@+id/Friends"
            android:title="@string/friends"
            android:icon="@drawable/friends"
            android:checkable="true"/>

        <item
            android:id="@+id/findfriends"
            android:title="@string/find_friends"
            android:icon="@drawable/find_people"
            android:checkable="true"/>
        <item
            android:id="@+id/messages"
            android:title="@string/messages"
            android:icon="@drawable/messages"
            android:checkable="true"/>
        <item
            android:id="@+id/settings"
            android:checkable="true"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/logout"
            android:checkable="true"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>


</menu>